// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoutePrivate should allow navigation for authenticated access 1`] = `
<div>
  <div>
    PRIVATE
  </div>
</div>
`;

exports[`RoutePrivate should redirect for unauthenticated access 1`] = `
<div>
  <div>
    REDIRECT
  </div>
</div>
`;
